# QuantVGGT

./: CMakeLists.txt  README.md  bench_layer.py  demo_gradio.py  demo_viser.py  requirements_demo.txt
deploy/: __init__.py
deploy/functional/: online_trans.py
deploy/layers/: quant_layer.py
deploy/nn/: quantization.py
evaluation/: kmeans.sh  look_pt.py  make_calibation.py  plot.py  run_7andN.py  run_7s.sh  run_co3d.py  run_co3d.sh
evaluation/quarot/: args_utils.py  model.json  quant_utils.py  quarot_linear.py  quarot_utils.py  train_utils.py  train_utils_agg.py  utils.py
evaluation/quarot/__pycache__/: quarot_linear.py
vggt.egg-info/: SOURCES.txt  top_level.txt
vggt/models/: aggregator.py
vggt/utils/: eval_utils.py  helper.py
